# AST-BACK

./: Dockerfile  README.md  docker-compose.yml  env.template
backend/: Makefile  debug.yml  pyproject.toml  requirements.txt  run.py  script.py  test.py
backend/alembic/: env.py
backend/app/: exceptions.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: example.py
backend/app/schemas/: example.py
backend/app/service/: example.py
backend/config/: app.py  db.py
backend/database/: __init__.py  admin.py  db.py  db_accessor.py  db_metadata.py  exeptions.py  types.py  unitofwork.py
backend/database/models/: __init__.py  mixin.py  template.py
backend/database/repository/: repository.py
backend/log/: db.py
backend/src/: admin.py  main.py
backend/src/app/api/: router.py
backend/src/app/api/v1/: book.py  document.py  feedback.py  theme_page.py  upload_file.py
backend/src/app/models/: mixin.py
backend/src/app/models/book/: book.py
backend/src/app/models/document/: document.py
backend/src/app/models/user/: user.py
backend/src/app/repositories/: exceptions.py
backend/src/app/repositories/book/: book.py
backend/src/app/repositories/document/: document.py
backend/src/app/schemas/: book.py  document.py  theme_page.py
backend/src/app/services/: book.py  document.py  user.py
backend/src/app/utils/: ftp_repo.py  ftp_serv.py  repository.py  unitofwork.py
backend/src/app_config/: config_api.py  config_ftp.py  config_redis.py
backend/src/database/: all_models.py  db_accessor.py
backend/src/redisrepo/: dependencies.py
(+4 files in other folders)
