[tool.poetry]
name = "backend"
version = "0.1.0"
description = "HAHATON BROO"
authors = ["4got10king <Aldavletshina77654@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
aiohttp = "^3.10.1"
uvicorn = "^0.30.6"
sqladmin = "^0.18.0"
alembic-postgresql-enum = "^1.3.0"
aioboto3 = "^13.2.0"
fastapi-cache2 = "^0.2.2"
aioredis = "^2.0.1"
redis = "^5.2.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
